--- a/src/components/topBar.module.scss
+++ b/src/components/topBar.module.scss
@@ -6,14 +6,27 @@ $primary-color: #2196f3;
 $transition-duration: 0.3s;
 $border-radius: 8px;
 
+// .homeContainer .topBar {
+//   position: fixed !important;
+//   top: 0 !important;
+//   left: 0 !important;
+//   right: 0 !important;
+// }
+
 .topBar {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  height: 50px;
   display: flex;
+  z-index: 1150;
   align-items: center;
   justify-content: space-between;
   background-color: $bg-color;
   color: $text-color;
   padding: 0.75rem 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
   position: relative;
 
   box-shadow: 0 2px 8px rgba($primary-color, 0.3);
@@ -39,9 +52,9 @@ $border-radius: 8px;
     color: color.scale($primary-color, $lightness: +40%);
   }
 
-  @media (min-width: 768px) {
-    display: none;
-  }
+  // @media (min-width: 768px) {
+  //   display: none;
+  // }
 }
 
 .rightIcons {
